--- a/chat.html
+++ b/chat.html
@@ -1,5 +1,5 @@
 <html>
-  <style type='text/css'>
+ <style type='text/css'>
 	.embeddedServiceHelpButton .helpButton .uiButton {
 		background-color: #00e098;
 		font-family: "Salesforce Sans", sans-serif;
@@ -47,7 +47,7 @@
 			{
 				baseLiveAgentContentURL: 'https://c.la2s-core1.sfdc-xwy4ub.salesforceliveagent.com/content',
 				deploymentId: '5723t000000U9GL',
-				buttonId: '5733t000000UAAq',
+				buttonId: '5733t000000UAAv',
 				baseLiveAgentURL: 'https://d.la2s-core1.sfdc-xwy4ub.salesforceliveagent.com/chat',
 				eswLiveAgentDevName: 'Atendimento',
 				isOfflineSupportEnabled: false
